--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <body>
   <div class="fontPreload">.</div>
 
+  <script src="./dist/phaser.js"></script>
   <script src="./dist/main.js"></script>
 </body>
 </html>
